# television

./: .dockerignore  .envrc  .gitignore  404.html  ARCHITECTURE.md  BENCHMARK.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  build.rs  cliff.toml  crates.nix  dockerfile  flake.nix  index.html  install.sh  justfile  opensearch.xml  output.txt  robots.txt  rust-toolchain.toml  rustfmt.toml  simple_test.toml  sitemap.xml
.config/: bindings.tvb  config.json5  config.toml  recipes.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml  changelog.yml  ci.yml  deploy-docs.yml  generate-cable-docs.yml  static.yml  test-deploy-docs.yml  update-cli-help.yml  update_readme.yml  winget.yml
advanced/template-system/: index.html
advanced/tips-and-tricks/: index.html
advanced/troubleshooting/: index.html
apt/: repository-key.asc
assets/css/: styles.21c2131b.css  styles.58870cbb.css  styles.6e342866.css  styles.7144b4c9.css  styles.756d9357.css  styles.777c1cef.css  styles.81ddf8b7.css  styles.8c19fd57.css  styles.a48f52ea.css  styles.cc1a39b4.css  styles.cf8a0153.css  styles.d51d362e.css  styles.de02034f.css  styles.fced343d.css
assets/js/: 03042a06.10cb6002.js  03042a06.64bd50de.js  03042a06.6b9efb40.js  03042a06.b8e01709.js  03042a06.cedcd90e.js  03cfbd19.7cc77d87.js  03cfbd19.7d9dcfa8.js  03cfbd19.acd592ae.js  03cfbd19.b1ad4dee.js  03cfbd19.bfc3b309.js  03cfbd19.db174b5e.js  03cfbd19.f47b2d60.js  03cfbd19.f5576f10.js  04ac2043.0e892117.js  1024.5d6d8470.js  1062.f317da1b.js  1109.9ea67029.js  1138.1ac355d9.js  1146.f433673b.js  1163.acdfb8e5.js  1236.e7f6277b.js  1288.4633e021.js  12eecda4.1436b788.js  12eecda4.76431224.js  12eecda4.95ccbec6.js  12eecda4.a28cade4.js  12eecda4.ce16722d.js  1314.07cf44c0.js  1314.ad30c852.js  1334.0783ad86.js  1370.4772152a.js  (+901 more)
benches/: main.rs  results_list_benchmark.rs
blog/: index.html
cable/: channels.toml  macos-channels.toml  unix-channels.toml  windows-channels.toml
crates/television-channels/: Cargo.toml
crates/television-channels/src/: cable.rs  channels.rs  entry.rs  lib.rs  recipes.rs
crates/television-channels/src/channels/: alias.rs  cable.rs  custom.rs  dirs.rs  docker.rs  env.rs  files.rs  git_branches.rs  git_repos.rs  remote_control.rs  stdin.rs  stdin_simd.rs  text.rs
crates/television-derive/: Cargo.toml
crates/television-derive/src/: lib.rs
crates/television-fuzzy/: Cargo.toml
crates/television-fuzzy/src/: lib.rs
crates/television-fuzzy/src/matcher/: config.rs  lazy.rs
crates/television-fuzzy/src/nucleo_pool/: config.rs  injector.rs  lazy.rs  mod.rs
crates/television-fuzzy/src/simd/: mod.rs
crates/television-fuzzy/src/simd/frizbee/: Cargo.toml
crates/television-fuzzy/src/simd/frizbee/smith_waterman_macro/: Cargo.toml
crates/television-fuzzy/src/simd/frizbee/src/: bucket.rs  lib.rs  prefilter.rs  score_matrix.rs  simd.rs
crates/television-previewers/: Cargo.toml
crates/television-previewers/src/: ansi.rs  lib.rs  previewers.rs
crates/television-previewers/src/ansi/: code.rs  parser.rs
crates/television-previewers/src/previewers/: basic.rs  cache.rs  command.rs  directory.rs  env.rs  files.rs  meta.rs
crates/television-screen/: Cargo.toml
crates/television-screen/src/: cache.rs  colors.rs  help.rs  input.rs  keybindings.rs  keymap.rs  layout.rs  lib.rs  metadata.rs  mode.rs  preview.rs  remote_control.rs  results.rs  spinner.rs
crates/television-utils/: Cargo.toml
crates/television-utils/shell/: completion.bash  completion.fish  completion.zsh
crates/television-utils/src/: cache.rs  files.rs  git.rs  input.rs  lib.rs  shell.rs  strings.rs  syntax.rs
crates/television_channels/: Cargo.toml
crates/television_channels/src/: channels.rs  entry.rs  lib.rs
crates/television_channels/src/channels/: alias.rs  env.rs  files.rs  git_repos.rs  stdin.rs  text.rs
crates/television_derive/: Cargo.toml
crates/television_derive/src/: lib.rs
crates/television_fuzzy/: Cargo.toml
crates/television_fuzzy/src/matcher/: injector.rs  lazy.rs  mod.rs
crates/television_previewers/: Cargo.toml
crates/television_previewers/src/: lib.rs
crates/television_previewers/src/previewers/: basic.rs  directory.rs  env.rs  files.rs  meta.rs
crates/television_utils/: Cargo.toml
crates/television_utils/src/: lib.rs  stdin.rs  syntax.rs  threads.rs  utils.rs
crates/television_utils/src/utils/: files.rs  strings.rs
docs/: channels.md  cli.md  design.md  features.md  index.md  installation.md  intro.md  keybindings.md  quickstart.md  shell-integration.md  terminal_emulators.md  themes.md
examples/: README_theme_overrides.md  theme_overrides_example.toml
man/: tv.1
markdown-page/: index.html
recipes/: recipes.toml
scripts/: bump.sh  generate_cable_docs.py  generate_legacy_config_pairs.py  get_version.py  publish.sh  update-channels.sh
search/: index.html
shell/: completion.zsh
src/: app.rs  cli.rs  config.rs  display.rs  events.rs  finders.rs  main.rs  pickers.rs  previewers.rs  tui.rs  ui.rs  utils.rs
television/: action.rs  app.rs  cable.rs  cli.rs  config.rs  draw.rs  errors.rs  event.rs  features.rs  frecency.rs  gh.rs  history.rs  input.rs  keymap.rs  lib.rs  logging.rs  main.rs  mouse.rs  picker.rs  render.rs  television.rs  tui.rs
television-derive/: Cargo.toml
television-derive/src/: lib.rs
tests/: app.rs  channels.rs  cli.rs  command_line.rs  configuration.rs  e2e.rs  mod.rs  remote_control.rs  subcommands.rs  ui.rs
themes/: afterglow.toml  ashes_dark.toml  ayu_dark.toml  catppuccin-mocha.toml  catppuccin.toml  cyberdream-light.toml  cyberdream.toml  default.toml  dracula.toml  gruvbox-dark.toml  gruvbox-light.toml  gruvbox.toml  monokai.toml  nord-dark.toml  nord.toml  onedark.toml  rose-pine-dawn.toml  rose-pine-moon.toml  rose-pine.toml  solarized-dark.toml  solarized-light.toml  television.toml  tokyonight.toml  vague.toml
website/: CONTRIBUTING.md  docusaurus.config.ts  package.json  pnpm-lock.yaml  sidebars.ts
(+417 files in other folders)
