[package]
name = "television-channels"
version = "0.0.18"
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
television-fuzzy = { path = "../television-fuzzy", version = "0.0.18" }
television-utils = { path = "../television-utils", version = "0.0.18" }
television-derive = { path = "../television-derive", version = "0.0.18" }
devicons = "0.6.11"
tracing = "0.1.40"
eyre = "0.6.12"
ignore = "0.4.23"
tokio = { version = "1.41.1", features = ["rt"] }
clap = { version = "4.5.20", features = ["derive"] }
directories = "5.0.1"
color-eyre = "0.6.3"
serde = "1.0.214"
strum = { version = "0.26.3", features = ["derive"] }
lazy_static = "1.5.0"
toml = "0.8.19"
regex = "1.11.1"
indexmap = "2.7.0"

[lints]
workspace = true
