[package]
name = "television-channels"
version = "0.0.23"
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
television-fuzzy = { path = "../television-fuzzy", version = "0.0.23" }
television-utils = { path = "../television-utils", version = "0.0.23" }
television-derive = { path = "../television-derive", version = "0.0.23" }

tracing = { workspace = true }
tokio = { workspace = true, features = ["rt"] }
clap = { workspace = true, features = ["derive"] }
devicons = { workspace = true }
directories = { workspace = true }
color-eyre = { workspace = true }
serde = { workspace = true }
lazy_static = { workspace = true }
toml = { workspace = true }
rustc-hash = { workspace = true }

ignore = "0.4.23"
strum = { version = "0.26.3", features = ["derive"] }
regex = "1.11.1"

[lints]
workspace = true
