[package]
name = "television-derive"
version = "0.0.18"
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
proc-macro2 = "1.0.87"
quote = "1.0.37"
syn = "2.0.79"


[lib]
proc-macro = true

[lints]
workspace = true
