[package]
name = "television-fuzzy"
version = "0.0.2"
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true
include.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
nucleo = "0.5.0"
parking_lot = "0.12.3"
