[package]
name = "television-fuzzy"
version = "0.0.7"
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
nucleo = "0.5.0"
parking_lot = "0.12.3"
frizbee = { path = "./src/simd/frizbee" }
threadpool = "1.8.1"
crossbeam-channel = "0.5.13"
tracing = "0.1.41"
rayon = "1.10.0"
