[package]
name = "television-previewers"
version = "0.0.9"
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
syntect = "5.2.0"
television-channels = { path = "../television-channels", version = "0.0.9" }
television-utils = { path = "../television-utils", version = "0.0.9" }
tracing = "0.1.40"
parking_lot = "0.12.3"
tokio = "1.41.1"
devicons = "0.6.11"
color-eyre = "0.6.3"
regex = "1.11.1"
lazy_static = "1.5.0"

