[package]
name = "television-previewers"
version = "0.0.18"
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
syntect = "5.2.0"
television-channels = { path = "../television-channels", version = "0.0.18" }
television-utils = { path = "../television-utils", version = "0.0.18" }
tracing = "0.1.40"
parking_lot = "0.12.3"
tokio = "1.41.1"
devicons = "0.6.11"
color-eyre = "0.6.3"
regex = "1.11.1"
lazy_static = "1.5.0"
nom = "7.1"
tui = { version = "0.29", default-features = false, package = "ratatui" }
thiserror = "1.0"
simdutf8 = { version = "0.1", optional = true }
smallvec = { version = "1.10.0", features = ["const_generics"] }

[features]
simd = ["dep:simdutf8"]
zero-copy = []
default = ["zero-copy", "simd"]

[lints]
workspace = true
