[package]
name = "television-screen"
version = "0.0.19"
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
television-utils = { path = "../television-utils", version = "0.0.19" }
television-channels = { path = "../television-channels", version = "0.0.19" }
television-previewers = { path = "../television-previewers", version = "0.0.19" }

ratatui = { workspace = true }
serde = { workspace = true }
color-eyre = { workspace = true }
syntect = { workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
