[package]
name = "television-utils"
version = "0.0.19"
description.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
lazy_static = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
directories = { workspace = true }
syntect = { workspace = true }
unicode-width = { workspace = true }
rustc-hash = { workspace = true }

ignore = "0.4.23"
bat = { version = "0.24.0", default-features = false, features = [
  "regex-onig",
] }
gag = "1.0.0"

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1.9"

[lints]
workspace = true
