[package]
name = "television-derive"
version = "0.1.0"
edition = "2021"
description = "The revolution will be televised."
license = "MIT"
authors = ["Alexandre Pasmantier <alex.pasmant@gmail.com>"]
repository = "https://github.com/alexpasmantier/television"
keywords = ["search", "fuzzy", "preview", "tui", "terminal"]
categories = [
  "command-line-utilities",
  "command-line-interface",
  "concurrency",
  "development-tools",
]

[dependencies]
proc-macro2 = "1.0.87"
quote = "1.0.37"
syn = "2.0.79"


[lib]
proc-macro = true
