[package]
name = "television-fuzzy"
version = "0.0.1"
edition = "2021"
description = "The revolution will be televised."
license = "MIT"
authors = ["Alexandre Pasmantier <alex.pasmant@gmail.com>"]
repository = "https://github.com/alexpasmantier/television"
keywords = ["search", "fuzzy", "preview", "tui", "terminal"]
categories = [
    "command-line-utilities",
    "command-line-interface",
    "concurrency",
    "development-tools",
]

[dependencies]
nucleo = "0.5.0"
parking_lot = "0.12.3"
